# spyder

./: .gitignore  Cargo.toml  README.md  diesel.toml  libfile_server.rlib
.github/workflows/: rust.yml
docs/: BUGFIX_AUTO_BLACKLIST_CONSTRAINT.md  CACHE_OPTIMIZATION.md  FILE_SERVER_TESTING.md
migrations/2025-05-15-155131_base/: down.sql  up.sql
migrations/2026-04-20-120000_page_enrichment/: down.sql  up.sql
migrations/2026-04-20-130000_retry_queue_and_backfill/: down.sql  up.sql
migrations/2026-04-20-140000_page_scan_history/: down.sql  up.sql
migrations/2026-04-20-150000_domain_blacklist/: down.sql  up.sql
migrations/2026-04-20-160000_site_classification/: down.sql  up.sql
migrations/2026-04-30-170423_host_level_cleanup/: up.sql
migrations/2026-05-02-110000_host_ssh_observations/: down.sql  up.sql
migrations/2026-05-04-110000_forum_keyword_tags/: down.sql  up.sql
migrations/2026-05-21-120000_auto_blacklist_rules/: down.sql  up.sql
migrations/2026-05-22-120000_relationship_graph_indexes/: down.sql  up.sql
migrations/2026-06-03-125634_fix_auto_blacklist_event_unique_constraint/: down.sql  up.sql
migrations_postgres/2026-05-04-000000_base/: down.sql  up.sql
migrations_postgres/2026-05-04-160000_host_http_tls_observations/: down.sql  up.sql
migrations_postgres/2026-05-06-120000_host_service_observations/: down.sql  up.sql
migrations_postgres/2026-05-11-120000_site_scan_metadata/: down.sql  up.sql
migrations_postgres/2026-05-11-130000_dashboard_performance/: down.sql  up.sql
migrations_postgres/2026-05-11-140000_intel_leads/: down.sql  up.sql
migrations_postgres/2026-05-12-090000_intel_lead_performance/: down.sql  up.sql
migrations_postgres/2026-05-18-120000_http_stack_resource_probes/: down.sql  up.sql
scripts/: backup_database.sh  cleanup_blacklisted_pages.sql  cleanup_proxy_errors.sql  create_test_db.sh  fix_collation.sh  monitor_dashboard.sh  refresh_relationship_view.sh  start_spyder_stack.sh  test_and_apply_migrations.sh
src/: config.rs  extraction.rs  file_server.rs  lib.rs  logging.rs  metrics.rs  models.rs  query_timer.rs  schema.rs
templates/: analytics.html.hbs  base.hbs  blacklist.html.hbs  crypto.html.hbs  dashboard.html.hbs  emails.html.hbs  error.html.hbs  http.html.hbs  index.html.hbs  lead_detail.html.hbs  leads.html.hbs  page_detail.html.hbs  page_history.html.hbs  page_scan_detail.html.hbs  pages.html.hbs  relationships.html.hbs  search.html.hbs  services.html.hbs  sites.html.hbs  sites_grouped.html.hbs  ssh.html.hbs  top.html.hbs  watchlists.html.hbs  work.html.hbs
tests/: file_server_tests.rs
(+26 files in other folders)
