[package]
name = "spyder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking", "socks"]}
select = "0.5"
regex = "1.4"
anyhow = "1.0.98"
diesel = { version = "2.2.0", features = ["sqlite", "postgres", "r2d2", "returning_clauses_for_sqlite_3_35"] }
# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15"
scraper = "0.23.1"
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
url = "2.5"
whatlang = "0.18.0"
ssh2 = "0.9"
native-tls = "0.2"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[[bin]]
name = "spyder"
path = "src/bin/spyder.rs"

[[bin]]
name = "frontend"
path = "src/bin/frontend.rs"
